Fix alignment Make sidebar sticky, fix main content spacing

--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@
 }
 
 #main-doc {
-  height: auto;
+  height: 100%;
   width: 100%;
   display: flex;
   background-color: var(--background);
@@ -26,8 +26,10 @@
 /* NAV */
 
 #navbar {
+  position: fixed;
+  height: 100%;
   padding: 4rem;
-  width: 30%;
+  width: 25%;
   background-color: var(--text);
   color: var(--accent);
   border-bottom-right-radius: 1rem;
@@ -40,26 +42,29 @@ a {
   margin: 0;
   list-style: none;
   text-decoration: none;
+  color: var(--text);
 }
 
 #navbar .title {
   font-family: "Space Grotesk", monospace;
   text-transform: uppercase;
-  font-size: 4rem;
-  padding-bottom: 2rem;
+  font-size: 2.5rem;
+  padding-bottom: 1rem;
 }
 
 #navbar a {
   color: var(--accent);
-  font-size: 1.75rem;
+  font-size: 1.5rem;
   font-weight: bold;
 }
 
 /* SECTIONS */
 
 .sections {
-  width: 70%;
-  padding: 4rem;
+  margin-left: 30%;
+  width: 100%;
+  height: 100%;
+  padding: 2.5rem;
 }
 
 header {
